White theme fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   --muted: #475569;
   --primary: #38bdf8;
   --card: #ffffff;
-  --sidebar-bg: rgb(44, 38, 38);
+  --sidebar-bg: #b8d9fd;
 }
 
 body.dark {
